# BlazePdf

./: .gitignore  Cargo.toml  README.md
blazepdf/: Cargo.toml
blazepdf-cli/: Cargo.toml
blazepdf-lib/: Cargo.toml
blazepdf-lib/benches/: dom_bench.rs
blazepdf-lib/src/: blaze_generate.rs  dom.rs  layout_taffy.rs  lib.rs
blazepdf-lib/src/parser/: blaze_html.rs  dom_indices.rs  html.rs  mod.rs
blazepdf-lib/src/style/: blaze_css.rs  css_matcher.rs  mod.rs  owned_css.rs
blazepdf-lib/tests/: dom_tree_test.rs
blazepdf/src/: main.rs
