[package]
name = "blazepdf-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
html5ever = "0.29"
cssparser = "0.27"
printpdf = "0.5"
rayon = "1.5"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
proptest = "1.6.0"
pretty_assertions = "1.4.1"
criterion = "0.5.1"

[[bench]]
name = "dom_bench"
harness = false
